feat: 添加字典类

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,12 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "target": "es2017",
+    "target": "esnext",
+    "lib": [
+      "esnext",
+      "ES2021",
+      "dom"
+    ],
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
@@ -20,7 +25,6 @@
     "paths": {
       "@/": [
         "src/"
-        
       ]
     }
   }
