--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.1",
     "@nestjs/passport": "^8.2.2",
-    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-express": "^10.4.13",
+    "@nestjs/serve-static": "^4.0.2",
     "@nestjs/typeorm": "^8.1.4",
     "@types/lodash": "^4.14.182",
     "@types/passport-jwt": "^3.0.6",
@@ -34,6 +35,7 @@
     "class-validator": "^0.13.2",
     "express": "^4.18.1",
     "lodash": "^4.17.21",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
@@ -49,6 +51,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
+    "@types/multer": "^1.4.12",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
